--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <artifactId>root</artifactId>
-        <groupId>ru.gb.network-storage</groupId>
+        <groupId>ru.gb.storage</groupId>
         <version>DEV-SNAPSHOT</version>
     </parent>
 
@@ -18,6 +18,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.5.6</version>
                 <executions>
                     <execution>
                         <goals>
