--- a/server/pom.xml
+++ b/server/pom.xml
@@ -12,6 +12,44 @@
 
     <artifactId>server</artifactId>
     <packaging>jar</packaging>
+    <name>server</name>
+
+    <properties>
+        <springframework.security.version>5.6.0</springframework.security.version>
+        <lombok.version>1.18.22</lombok.version>
+        <HikariCP.version>5.0.0</HikariCP.version>
+        <postgresql.version>42.2.23</postgresql.version>
+    </properties>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${springframework.security.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>${HikariCP.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
+        </dependency>
+
+
+    </dependencies>
 
     <build>
         <plugins>
