added ConfigProperties class to provide access for properties

--- a/server/src/main/resources/config.properties
+++ b/server/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 # common - postgresql
 driverClass=org.postgresql.Driver
-url=jdbc:postgresql://localhost:5432/chat
+url=jdbc:postgresql://10.0.10.62:5432/network_storage
 username=postgres
 password=123
