--- a/client/pom.xml
+++ b/client/pom.xml
@@ -15,9 +15,17 @@
 
     <properties>
         <javafx.version>11.0.2</javafx.version>
+        <lombok.version>1.18.22</lombok.version>
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>ru.gb.storage</groupId>
             <artifactId>commons</artifactId>
