--- a/server/pom.xml
+++ b/server/pom.xml
@@ -67,6 +67,12 @@
             <artifactId>commons</artifactId>
             <version>DEV-SNAPSHOT</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+        </dependency>
 
     </dependencies>
 
