--- a/client/pom.xml
+++ b/client/pom.xml
@@ -14,7 +14,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <javafx.version>11.0.2</javafx.version>
+        <javafx.version>17</javafx.version>
         <lombok.version>1.18.22</lombok.version>
     </properties>
 
@@ -41,6 +41,12 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.dustinredmond.fxalert</groupId>
+            <artifactId>FXAlert</artifactId>
+            <version>2.4.1</version>
         </dependency>
     </dependencies>
 
