--- a/server/pom.xml
+++ b/server/pom.xml
@@ -86,6 +86,24 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>8.2.1</version>
+                <configuration>
+                    <user>postgres</user>
+                    <password>123</password>
+                    <url>jdbc:postgresql://10.0.0.82:5432/network_storage</url>
+                    <driver>org.postgresql.Driver</driver>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.postgresql</groupId>
+                        <artifactId>postgresql</artifactId>
+                        <version>${postgresql.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
 
