--- a/server/pom.xml
+++ b/server/pom.xml
@@ -20,7 +20,7 @@
         <HikariCP.version>5.0.0</HikariCP.version>
         <postgresql.version>42.2.23</postgresql.version>
         <netty.version>4.1.70.Final</netty.version>
-        <app.image.name>netty-network-storage</app.image.name>
+        <app.image.name>netty-network-storage-server</app.image.name>
         <app.image.tag/>
     </properties>
 
