--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   db:
     container_name: nns_db_postgres
-    image: shuricans/netty-network-storage-db-postgres:latest
+    image: shuricans/netty-network-storage-db-postgres:x86
     restart: unless-stopped
     environment:
       POSTGRES_USER: postgres
